tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_comparison/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/typecheck/bool_in_arith_comparison/bool_in_arith_comparison.essence:2:15:
  |
2 | such that b > 5
  |               ^
Type error:
	Expected: bool
	Got: int

